--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,1 @@
-releases/linux
-releases/mac
-releases/windows
-
-!releases/linux/.gitkeep
-!releases/mac/.gitkeep
-!releases/windows/.gitkeep
+out/*
