--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     }
   },
   "dependencies": {
+    "electron-dl": "^1.14.0",
     "electron-squirrel-startup": "^1.0.0"
   },
   "devDependencies": {
